--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,16 @@
+<form action='/checkout' method="POST">
+<table>
+<tr>
+  <h2>Store Items</h2>
+  <label for="item">Item:</label><br>
+  <input id="item" type="text" name="item"><br>
+</tr>
+<tr>
+<h2> <%=session["item"]%></h2>
+<input type="submit" value ="submit">
+ 
+</tr>
+</table>
+ </form>
+
 
